# AttacKit

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile.amd64-linux  Dockerfile.amd64-linux-static  Dockerfile.arm64-linux  LICENSE  README.md  attackit.1  cross_compile.sh
.github/: lint.yml
.github/workflows/: cmake-single-platform.yml  format.yml  lint.yml
cli/: CMakeLists.txt
cli/internal/helper/: CLIExecutor.h  CLIParser.h  CLITypes.h  helper.h
cli/src/: cli.cpp
cli/src/helper/: CLIExecutor.cpp  CLIParser.cpp  helper.cpp
core/: CMakeLists.txt  core.cpp
core/include/: arp_poisoning.h  core.h
core/include/arp/: arp_poisoning.h
core/include/arp_poisoning/: arp_poisoning.h  public.h
core/include/common/: common.h
core/include/dns_poisoning/: public.h
core/include/network_scout/: network_scout.h  sniffing.h
core/include/ssl_stripping/: public.h
core/internal/arp/: arp_resolver.h  create_packet.h
core/internal/arp_poisoning/: all_out.h  arp_poisoning_strategy.h  create_packet.h  silent.h
core/internal/common/: pcap_to_common.h
core/internal/dns_poisoning/: all_out.h  dns_poisoning_strategy.h  silent.h
core/internal/ssl_stripping/: all_out.h  silent.h  ssl_stripping_strategy.h
core/src/: arp_poisoning.cpp  core.cpp
core/src/arp/: arp_poisoning.cpp  arp_resolver.cpp  create_packet.cpp
core/src/arp_poisoning/: all_out.cpp  arp_poisoning.cpp  create_packet.cpp  public.cpp  silent.cpp
core/src/common/: pcap_to_common.cpp
core/src/dns_poisoning/: all_out.cpp  public.cpp  silent.cpp
core/src/helper/: help.cpp
core/src/network_scout/: network_scout.cpp  sniffing.cpp
core/src/ssl_stripping/: all_out.cpp  public.cpp  silent.cpp
include/core/: core.h
logging/: CMakeLists.txt
logging/include/: log.h
src/: main.cpp
src/cli/: CMakeLists.txt  cli.cpp
src/core/: CMakeLists.txt  core.cpp
src/logger/: hello.cpp
